Feat: 생성 두 번째, 세 번째 페이지
--aboutme.html
로렘 입숨을 활용하여 간단한 텍스트 페이지 구현
--photo.html
사진 파일과 그 옆에 텍스트 파일 배치

--- a/aboutme/src/main/webapp/style.css
+++ b/aboutme/src/main/webapp/style.css
@@ -15,8 +15,11 @@ li{
 	padding: 5px 40px;
 	
 }
-.main {
+.index_main {
 	text-align : center;
+}
+.photo_main {
+	margin : 20px;
 }
 p{
 	margin-bottom : 20px;
@@ -27,8 +30,20 @@ p{
 	padding : 10px;
 }
 
-.image{
+.index_image{
 	margin : 40px;
+}
+
+.photo_image{
+	border:1rem solid red;
+	vertical-align: middle;
+}
+
+.photo_text{
+	margin-left:20px;
+}
+.aboutme_text{
+	margin-bottom: 20px;
 }
 
 footer {
