--- a/aboutme/src/main/webapp/style.css
+++ b/aboutme/src/main/webapp/style.css
@@ -18,9 +18,6 @@ li{
 .index_main {
 	text-align : center;
 }
-.photo_main {
-	margin : 20px;
-}
 p{
 	margin-bottom : 20px;
 }
@@ -37,10 +34,16 @@ p{
 .photo_image{
 	border:1rem solid red;
 	vertical-align: middle;
+	float:left;
 }
-
-.photo_text{
-	margin-left:20px;
+.photo_article{
+	margin:20px;
+}
+.photo_section{
+	float:left;
+}
+.photo_clear{
+	clear: both;
 }
 .aboutme_text{
 	margin-bottom: 20px;
